# IT8951

./: .gitignore  AsciiLib.h  CMakeLists.txt  IT8951.c  IT8951.h  Makefile  README.md  Readme.md  interface.c  interface.h  main.c  miniGUI.c  test.c
epaper/: device.py  requirements.txt  run.sh  web.py
original/: AsciiLib.c  IT8951.c  IT8951.h  bmp.c  main.c  miniGUI.c  miniGUI.h
